# Immobil-IA

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Immobil-IA/src-tauri/: Cargo.toml  tauri.conf.json
Immobil-IA/src-tauri/src/: main.rs
admin-panel/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-panel/src/: main.tsx  styles.css  vite-env.d.ts
docs/: architecture.md
models/: export_models.py  matchmaker.onnx  model_contract.md  post_comparer.onnx  requirements.txt  validate_models.py
scraper-agent/: Dockerfile  package-lock.json  package.json
scraper-agent/fixtures/: controlled-source.html
scraper-agent/src/: index.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AddRadarModal.tsx  EntityViews.tsx  ManualEntryModal.tsx  MorningBriefing.tsx  Onboarding.tsx  RadarConfig.tsx  Sidebar.tsx  TemplateEditor.tsx  TopBar.tsx  UserSettings.tsx  ValidationPanel.tsx
src/components/ui/: Button.tsx  Field.tsx  Modal.tsx
src/lib/: api.ts  clientBehavior.ts  demoData.ts  propertyGroups.ts  radarRules.ts  templateRenderer.ts  types.ts  utils.ts
src/stores/: useAppStore.ts
thin-server/: Dockerfile  package-lock.json  package.json
thin-server/src/: index.ts
