[package]
name = "immobil-ia"
version = "0.1.0"
description = "Immobil-IA MVP local"
authors = ["Immobil-IA"]
edition = "2021"

[[bin]]
name = "immobil-ia"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tauri = { version = "2.2.5", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
